Frontend van de home en willekeurige dag pagina

--- a/index.html
+++ b/index.html
@@ -12,26 +12,38 @@
         <meta name="copyright" content="copyright">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styless.css">
-
         <title>KnowItAll</title>
-
-        <header>
-
-        </header>
     </head>
 
-    <body>
+    <header>
+        <div class="navigation">
 
-    <div class="navigation">
-
-        <div class="topnav">
-            <img src="Images/music.png">
-            <a href="inloggen.html">Inloggen</a>
-            <a href="willekeurig.html">Willekeurig weetje</a>
-            <a  class="active" href="index.html">Home</a>
+            <div class="topnav">
+                <img src="Images/music.png">
+                <a href="inloggen.html">Inloggen</a>
+                <a href="willekeurig.html">Willekeurig weetje</a>
+                <a  class="active" href="index.html">Home</a>
+            </div>
         </div>
+    </header>
 
+    <body>
+    <div class="titel">
+        <h1>Weetje van de dag</h1>
+    </div>
+
+    <div class="box">
+        <div id="weetje">
+            <h4>•	Op 13 juli 1973 kwam het eerste album van de band Queen uit, het album luidde naar de naam: Queen. Op deze lp (Langspeelplaat) stonden o.a. Keep Yourself Alive, Doing All Right, Great King Rat en My Fairy King.</h4>
+        </div>
+        <div id="queen">
+            <img src="Images/queen.jpg">
+        </div>
+        <div id="bron">
+            <h6>Bron: Wikipedia.com</h6>
+        </div>
     </div>
 
     </body>
+
 </html>
