--- a/inloggen.html
+++ b/inloggen.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta http-equiv="content-type"
-          Content="text/html;
-              charset=UTF-8">
-    <meta name="robots" content="all">
-    <meta name="language" content="Dutch">
-    <meta name="author" content="Mohamed">
-    <meta name="description" content="KnowItall">
-    <meta name="keywords" content="KnowItAll, weetjes">
-    <meta name="copyright" content="copyright">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styless.css">
+    <head>
+        <meta http-equiv="content-type"
+              Content="text/html;
+                  charset=UTF-8">
+        <meta name="robots" content="all">
+        <meta name="language" content="Dutch">
+        <meta name="author" content="Mohamed">
+        <meta name="description" content="KnowItall">
+        <meta name="keywords" content="KnowItAll, weetjes">
+        <meta name="copyright" content="copyright">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styless.css">
 
-    <title>KnowItAll</title>
+        <title>KnowItAll</title>
+
+    </head>
 
     <header>
+        <div class="navigation">
 
+            <div class="topnav">
+                <img src="Images/music.png">
+                <a class="active" href="inloggen.html">Inloggen</a>
+                <a href="willekeurig.html">Willekeurig weetje</a>
+                <a href="index.html">Home</a>
+            </div>
+
+        </div>
     </header>
-</head>
 
-<body>
+    <body>
 
-<div class="navigation">
-
-    <div class="topnav">
-        <img src="Images/music.png">
-        <a class="active" href="inloggen.html">Inloggen</a>
-        <a href="willekeurig.html">Willekeurig weetje</a>
-        <a href="index.html">Home</a>
+    <div class="titel">
+        <h1>Inloggen</h1>
     </div>
 
-</div>
+    <div class="box2">
 
-</body>
+    </div>
+
+
+
+
+
+
+
+    </body>
 </html>
