--- a/inloggen.html
+++ b/inloggen.html
@@ -28,6 +28,7 @@
             </div>
 
         </div>
+
     </header>
 
     <body>
@@ -37,14 +38,21 @@
     </div>
 
     <div class="box2">
+        <div class="container">
+            <label for="Gebr"><b>Gebruikersnaam</b></label>
+            <input type="text" placeholder="Vul uw gebruikersnaam in..." name="uname" required>
+
+            <label for="WW"><b>Wachtwoord</b></label>
+            <input type="password" placeholder="Vul uw wachtwoord in" name="psw" required>
+
+            <button type="submit">Inloggen</button>
+        </div>
+
+        <div class="container">
+            <span class="psw"><a href="#">Wachtwoord vergeten?</a></span>
+        </div>
+        </form>
 
     </div>
-
-
-
-
-
-
-
     </body>
 </html>
