--- a/inloggen.html
+++ b/inloggen.html
@@ -36,6 +36,7 @@
     <div class="titel">
         <h1>Inloggen</h1>
     </div>
+    <form action="">
 
     <div class="box2">
         <div class="container">
