--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="copyright" content="copyright">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styless.css">
+        <link rel="stylesheet" href="mysql.php">
         <title>KnowItAll</title>
     </head>
 
@@ -33,6 +34,7 @@
     </div>
 
     <div class="box">
+
 
     </div>
 
