--- a/willekeurig.html
+++ b/willekeurig.html
@@ -13,6 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styless.css">
 
+
         <title>KnowItAll</title>
     </head>
 
@@ -23,7 +24,7 @@
                 <img src="Images/music.png">
                 <a href="inloggen.html">Inloggen</a>
                 <a class="active" href="willekeurig.html">Willekeurig weetje</a>
-                <a href="index.html">Home</a>
+                <a href="mysql.php">Home</a>
             </div>
 
         </div>
@@ -36,12 +37,14 @@
     </div>
 
     <div class="box2">
-        <form action="/action_page.php">
+        <form id="weetjeszoeker">
             <label for="dag">Kies een dag uit:</label>
-            <input type="date" id="dag" name="dag">
-            <input type="submit">
+            <input type="date" id="dag" name="datum">
+            <input type="submit" name="submit" onchange="datum()">
         </form>
+
     </div>
+
 
 
 
