--- a/willekeurig.html
+++ b/willekeurig.html
@@ -24,7 +24,7 @@
                 <img src="Images/music.png">
                 <a href="inloggen.html">Inloggen</a>
                 <a class="active" href="willekeurig.html">Willekeurig weetje</a>
-                <a href="mysql.php">Home</a>
+                <a href="index.php">Home</a>
             </div>
 
         </div>
