--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="copyright" content="copyright">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styless.css">
-        <link rel="stylesheet" href="mysql.php">
+        <link rel="stylesheet" href="index.php">
         <title>KnowItAll</title>
     </head>
 
